# kiwi

./: Cargo.toml
src/: bond.rs  kinematics.rs  lib.rs  main.rs  material_point.rs  materials.rs  node.rs  parse.rs  testgrid.csv  testinput.toml  timeintegration.rs
test/: testinput.toml
