[package]
name = "kiwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"


[dependencies]
# Schedules and running stuff
bevy = "0.11.0"

# # Vector library
# glam = { git = "https://github.com/watsonkh/glam-rs-4-bevy_ecs.git" }

# Input files, serialization, deserialization
serde = "1.0.164"
toml = "0.7.4"
clap = {version = "4.3.4", features = ["derive"]}
